# vibe-coding-practice

./: .gitignore  README.md  idea.md  test.py  test2.py  test3.py
2024-12-22-cursor-摄像头照相并检测/: b.py
2025-08-18-chrome-extention-helloworld/: README.md  manifest.json  popup.html
2025-08-18-chrome-extention-webpage2markdown/: background.js  manifest.json
2025-08-18-python-github-repo-to-epub/: md_to_epub.py  md_to_epub2.py  md_to_epub3.py  md_to_epub4.py
2025-09-09-cursor-对目录下的文件进行语义分类/: DASHSCOPE_SETUP.md  FILE_INDEX.md  text_indexer.py
2025-09-09-paper-fetcher/: README.md  config.json  demo.py  demo_papers.html  local_smtp_server.py  paper_fetcher.py  test_local_email.py  test_script.py
2025-09-12-chrome插件-网页文章大纲/: demo_papers.html  test_local_config.json  wget-log  wget-log.1
2025-10-02-ai-agent-入门第一课/: 13 LlamaIndex框架.ipynb
2025-10-02-ai-agent-入门第一课/data/: test.txt
2025-10-23-vLLM-usage/: load_model.py
2025-10-24-llama-cpp-usage/: 2025-10-24-llama-cpp-usage.ipynb  config.py  llama-cpp-llama.py  llama-cpp-qwen-chat-function-calling.py  llama-cpp-qwen-chat-json-mode.py  llama-cpp-qwen-chat-json-schema-mode.py  llama-cpp-qwen.py
2025-11-25-TODO-app/app/: build.gradle.kts
2025-11-25-TODO-app/gradle/: libs.versions.toml
2025-11-25-android-demo/: settings.gradle.kts
2025-12-03-map-of-post-rock/: .netrc  README.md  artist_embeddings.py  get_artists.py  pyproject.toml  spec.md  test_api.py
dailydoseofds/2025-08-02-RAG workflow with clean/: 2025-08-02-RAG workflow with clean.py  2025-08-02-streamlit-demo.py
demo_gradio/: demo2.py
(+36 files in other folders)
